fix: cover image upload issue on mobile

--- a/src/app/components/profile/about-image/about-image.component.scss
+++ b/src/app/components/profile/about-image/about-image.component.scss
@@ -23,7 +23,7 @@
     position: relative;
 }
 .o-cover-media__image{
-    width: 482px;
+    width: 480px;
     height: 482px;
     float: left;
     background: #F3F5F7;
